# churn-predictor

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  churn.html  coverage.xml  docker-compose.api.yml  docker-compose.data_pipeline.yml  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  grafana_dashboard.py  migration.py  mlflow.db  prometheus.yml  pyproject.toml  requirements-azure.txt  requirements-core.txt  requirements-ml.txt  requirements.txt  retrain.py  setup.py  test_api.db  test_env.py
.dvc/: config
.github/workflows/: airflow.yml  api-ci.yml  api-deploy.yml  ci-cd.yml  dvc.yml
airflow/config/: config.yml
airflow/dags/: BaseModel_training_dag.py  ETL_real-time_pipeline.py  ETL_real_time_pipeline.py  ETL_train_pipeline.py  Retrain_on_drift_detection.py  drift_detection_dag.py  etl.py
airflow/seed/: tb_call_metrics.sql  tb_churn_label.sql  tb_credit_profile.sql  tb_customer.sql  tb_customer_features_combined.sql  tb_demographics.sql  tb_equipment_info.sql  tb_financials.sql  tb_household.sql  tb_occupation_profile.sql  tb_prizm_segment.sql  tb_retention_info.sql  tb_services_features.sql  tb_tenure_info.sql  tb_usage_metrics.sql  tb_vehicles.sql
config/: config_airflow.yaml  config_api_data-val.yaml  config_ingest.yaml  config_process.yaml  config_retrain.yaml  config_train.yaml  config_train_nn.yaml  config_train_nn_quick.yaml  config_train_rf.yaml  config_train_xgb.yaml
data/: .gitignore  snapshots.dvc
docker/airflow/: dockerfile
docker/api/: Dockerfile
docker/api/scripts/: build-api.sh  logs-api.sh  start-api.sh  (+1 more)
docker/data_pipeline/: Dockerfile  entrypoint.sh
docker/mlflow/: Dockerfile
docker/train/: Dockerfile
docker/training/: Dockerfile
documentations/: api_overview.md  api_serving_and_deployment.md  database.md  examples.md  metrics_api.md  predict_api.md  train_api.md  validation.md
models/neural_net/: latest.pth  metadata.json
models/random_forest/: metadata.json
models/xgboost/: .gitignore  metadata.json
notebooks/: preprocess_notebook.ipynb  preprocess_notebook_2.ipynb  xgb_notebook.ipynb
scripts/: aci-management.sh  deploy-aci-cross-account.sh  deploy-aci.sh
src/api/: authenticator.py  db.py  main.py  ml_models.py  schemas.py
src/data_pipeline/: data_simulation.py  ingest.py  pipeline_data.py  preprocess.py  preprocessing_artifacts.json  preprocessing_artifacts.pkl  run.py  validate_after_preprocess.py
src/models/: train_nn.py  train_rf.py  train_xgb.py
src/monitoring/: data_source.py  drift.py  grafana_exporter.py
src/utils/: mlflow_config.py
tests/: conftest.py  test_train.py
tests/api/: test_endpoints.py  test_health.py
tests/integration/: test_dags_integration.py  test_training.py
tests/utils/: assertions.py
venv_clean/: pyvenv.cfg
(+107 files in other folders)
