[tool.poetry]
name = "churn-prediction"
version = "0.1.0"
description = "A churn prediction API"
authors = ["Jordan Buwa - Aderonke Ajefolakemi - Wycliffe Nzomo (jmbouobda, aajefolakemi, wnzomo)@aimsammi.org"]

[tool.poetry.dependencies]
python = "^3.11"
dvc = {extras = ["azure"], version = "^2.10.2"}
pandas = "^1.4.2"
numpy = "^1.22.3"
scikit-learn = "^1.1.1"
scipy = "^1.8.0"
joblib = "^1.1.0"
xgboost = "^1.6.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
imbalanced-learn = "^0.9.1"
fastapi = {extras = ["standard"], version = "^0.78.0"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
azure-storage-blob = "^12.12.0"
PyYAML = "^6.0"
opencensus-ext-azure = "^1.1.3"
opencensus-ext-logging = "^0.1.1"
psycopg2-binary = "^2.9.3"
sqlalchemy = "^1.4.36"
alembic = "^1.7.7"
mlflow = "^1.26.0"
optuna = "^2.10.0"
optuna-integration = {extras = ["mlflow"], version = "^4.5.0"}
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
great-expectations = "^0.15.10"
requests = "^2.27.1"
httpx = "^0.23.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.0.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"